# goit-pythonweb-hw-01

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/tasks/: task_1.py  task_2.py
src/utils/: logger_config.py
